--- a/css/custom.css
+++ b/css/custom.css
@@ -10,28 +10,52 @@ div#main {
 }
 
 .main-visual {
-    background-image: url(../img/visual-bg.png);
-    background-position: center;
+    background-image: url(../img/main-visual-bg.jpeg);
+    background-position: 50% 10%;
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
+    position: relative;
+    background-attachment: fixed;
+}
+.main-visual > * {
+    z-index: 100;
+}
+.main-visual::before {
+    content: ""; 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(120deg, #000000b3, #ffcedc);
+    opacity: .7;
+
 }
 .side-nav {
     position: fixed;
     height: 100vh;
-    box-shadow: 0 0.125rem 0.8rem #e9ecef;
+    /* box-shadow: 0 0.125rem 0.8rem #e9ecef; */
     padding: 5rem 1rem 0;
+    background-color: #222222;
 }
 .nav-link {
     color: #212529!important;
 }
 .list-group-item {
     border: none;
+    background-color: transparent;
+    color: #ffeded;
 }
 .list-group-item.active {
-    background-color: #fff2f1;
-    color: #DF8D80;
+    background-color: #ffffff59;
+    color: #ffe3df;
 }
+.list-group-item-action:focus, .list-group-item-action:hover {
+    background-color: #ffffff59;
+    color: #ffe3df;
+}
+
 .main-visual__pic {
     padding-top: 25%;
 }
@@ -53,106 +77,13 @@ div#main {
     background-color: #DF8D80;
     color: #fff;
 }
-/*--background-circle-animation--*/
-.area{
-    width: 100%;
-    /* height:100vh; */
-}
-.circles{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    z-index: -1;
-}
 
-.circles li{
-    position: absolute;
-    display: block;
-    list-style: none;
-    width: 20px;
-    height: 20px;
-    background: rgb(255 121 121 / 20%);
-    animation: animate 25s linear infinite;
-    bottom: 70vh;
-}
-.circles li:nth-child(1){
-    left: 25%;
-    width: 80px;
-    height: 80px;
-    animation-delay: 0s;
-}
-.circles li:nth-child(2){
-    left: 10%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 2s;
-    animation-duration: 12s;
-}
-.circles li:nth-child(3){
-    left: 70%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 4s;
-}
-.circles li:nth-child(4){
-    left: 48%;
-    width: 60px;
-    height: 60px;
-    animation-delay: 1s;
-    animation-duration: 8s;
-}
-.circles li:nth-child(5){
-    left: 65%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 0s;
-}
-.circles li:nth-child(6){
-    left: 75%;
-    width: 110px;
-    height: 110px;
-    animation-delay: 3s;
-}
-.circles li:nth-child(7){
-    left: 35%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 0s;
-}
-.circles li:nth-child(8){
-    left: 60%;
-    width: 25px;
-    height: 25px;
-    animation-delay: 3s;
-    animation-duration: 45s;
-}
-.circles li:nth-child(9){
-    left: 20%;
-    width: 15px;
-    height: 15px;
-    animation-delay: 2s;
-    animation-duration: 35s;
-}
-.circles li:nth-child(10){
-    left: 85%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 0s;
-    animation-duration: 11s;
-}
-@keyframes animate {
-    0%{
-        transform: translateY(0) rotate(0deg);
-        opacity: 1;
-        border-radius: 0;
-    }
-    100%{
-        transform: translateY(-1000px) rotate(720deg);
-        opacity: 0;
-        border-radius: 50%;
-    }
 
+.contact-sns {
+    text-align: center;
+    margin: 2rem 0;
+}
+.contact-sns a {
+    color: #fff2f1;
+    margin: 0 5px;
 }
