--- a/css/custom.css
+++ b/css/custom.css
@@ -19,7 +19,7 @@ div#main {
     background-attachment: fixed;
 }
 .main-visual > * {
-    z-index: 100;
+    z-index: 10;
 }
 .main-visual::before {
     content: ""; 
@@ -37,10 +37,35 @@ div#main {
     height: 100vh;
     /* box-shadow: 0 0.125rem 0.8rem #e9ecef; */
     padding: 5rem 1rem 0;
-    background-color: #222222;
+    background-color: #101010;
 }
 .nav-link {
     color: #212529!important;
+}
+button.sp-menu {
+    position: fixed;
+    z-index: 100;
+    margin: 16px;
+    right: 0;
+    font-size: 23px;
+    line-height: 1;
+    box-shadow: 0 0 0 0.25rem rgb(223 141 128 / 44%);
+    transition: 0.5s;
+}
+button.sp-menu:focus, button.sp-menu:hover {
+    color: #fff;
+    background-color: #df8d80;
+    border-color: #df8d80;
+    box-shadow: 0 0 0 0.4rem rgb(223 141 128 / 44%);
+}
+.sp-menu-content {
+    background-color: #212529;
+}
+.offcanvas-header {
+    padding: 26px;
+}
+.btn-close {
+    background-color: #ffdde0;
 }
 .list-group-item {
     border: none;
@@ -86,4 +111,9 @@ div#main {
 .contact-sns a {
     color: #fff2f1;
     margin: 0 5px;
+}
+
+
+.progress-bar {
+    background-color: #df8d80;
 }
