--- a/custom/style.css
+++ b/custom/style.css
@@ -16,7 +16,7 @@ body {
 	background-image: url(../img/main-visual-bg.jpeg);
 }
 .clip-text {
-    font-size: 11em;
+    font-size: 9em;
     font-weight: bold;
     line-height: 1;
     display: inline-block;
@@ -32,15 +32,15 @@ body {
     background-position: 50% 19%;
 }
 
-
 .clip-text:before {
     z-index: -2;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    background-position: -2.75em 0;
-    background-image: linear-gradient(120deg, #00000000, #ffcedc);
+    background-position: -2.75em -20rem;
+    background-image: url(../img/main-visual-bg.jpeg), linear-gradient(93deg, #ffffffb3, #ffebf2);
+    background-blend-mode: lighten;
 }
 .clip-text:before, .clip-text:after {
     position: absolute;
