--- a/custom/portfolio-css.css
+++ b/custom/portfolio-css.css
@@ -6,7 +6,6 @@
 }
 body {
     font-family: 'Josefin Sans', sans-serif;
-    position: relative;
     font-size: 18px;
     margin: 0;
 }
@@ -17,12 +16,18 @@ html {
   padding: 1rem;
   max-height: fit-content;
   height: 100vh;
-  background: linear-gradient(90deg, #FFC0CB 50%, #00FFFF 50%);
+  background: linear-gradient(90deg, #FFC0CB 50%, #94f3f3 50%);
 
 }
-.hero-wrapper {
+/* .hero-wrapper {
     display: block;
     margin: 25% 30%;
+} */
+.hero-wrapper {
+  display: block;
+  margin: 20% 15%;
+  background-color: #fff;
+  padding: 2rem;
 }
 .hero-wrapper h1 {
     color: #fff;
@@ -30,7 +35,20 @@ html {
     font-weight: 300;
     color: #000;
 }
+.hero-row {
+   display: inline-block;
+}
+.hero-col-left {
+   float: left;
+}
+.hero-col-right {
+   position: absolute;
+   right: 3%;
+   top: 13%;
+}
 
+/*--navigation css--*/
+/*--pc nav--*/
 #navbar {
   display: block;
   width: 100%;
@@ -39,7 +57,7 @@ html {
   align-items: center;
   text-align: center;
   justify-content: center;
-  z-index: 1;
+  z-index: 10;
 }
 nav ul {
     padding: 0;
@@ -47,7 +65,6 @@ nav ul {
 }
 nav li {
     list-style: none;
-    display: inline-block;
 }
 nav li a {
     text-decoration: none;
@@ -62,25 +79,10 @@ nav li a:hover {
   color: #000;
   text-decoration: line-through;
 }
-/* .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-} */
-.sticky {
-  position: fixed;
-  background-color: #fff;
-}
-.sticky + .content {
-    padding-top: 100px;
-}
-.active {
-  color: #000;
-  text-decoration: line-through;
-}
-li.nav-logo-wrap a:hover {
-  background-color: transparent;
-}
+.nav-active {
+   color: #000;
+   text-decoration: line-through;
+ }
 .nav-logo {
   width: 140px;
   vertical-align: middle;
@@ -90,13 +92,126 @@ li.nav-logo-wrap a:hover {
   background-color: #fff;
   transition: 1s;
 }
-/*--nav--*/
 
+/*--sp nav--*/
+.menu-btn {
+   display: none;
+ }
+ @media screen and (max-width:768px) {
+   .menu-btn {
+     display: inherit;
+   }
+   #navbar {
+     display: none;
+   }
+ }
+ .wrapper{
+   position: fixed;
+   top: 0;
+   left: 0;
+   height: 100%;
+   width: 100%;
+   z-index: 1;
+   clip-path: circle(25px at calc(100% - 45px) 45px);
+   transition: all 0.3s ease-in-out;
+ }
+ #active:checked ~ .wrapper{
+   clip-path: circle(75%);
+   background: #000;
+ }
+ .menu-btn{
+   position: fixed;
+   z-index: 2;
+   right: 20px;
+   /* left: 20px; */
+   top: 20px;
+   height: 50px;
+   width: 50px;
+   text-align: center;
+   line-height: 50px;
+   border-radius: 50%;
+   font-size: 20px;
+   color: #fff;
+   cursor: pointer;
+   background: #000;
+   transition: all 0.3s ease-in-out;
+ }
+ #active:checked ~ .menu-btn{
+   color: #fff;
+ }
+ #active:checked ~ .menu-btn i:before{
+   content: "\f00d";
+ }
+ .wrapper ul{
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   list-style: none;
+   text-align: center;
+ }
+ .wrapper ul li{
+   margin: 15px 0;
+ }
+ .wrapper ul li a{
+   color: none;
+   text-decoration: none;
+   font-size: 30px;
+   font-weight: 500;
+   padding: 5px 30px;
+   color: #fff;
+   border-radius: 50px;
+   background: #000;
+   position: relative;
+   line-height: 50px;
+   transition: all 0.3s ease;
+ }
+ .wrapper ul li a:after{
+   position: absolute;
+   content: "";
+   background: #fff;
+    background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);
+   width: 104%;
+   height: 110%;
+   left: -2%;
+   top: -5%; /* if the font is 'Oswald'*/
+   border-radius: 50px;
+   transform: scaleY(0);
+   z-index: -1;
+   animation: rotate 1.5s linear infinite;
+   transition: transform 0.3s ease;
+ }
+ .wrapper ul li a:hover:after{
+   transform: scaleY(1);
+ }
+ .wrapper ul li a:hover{
+   color: #fff;
+ }
+ input[type="checkbox"]{
+   display: none;
+ }
+ 
+ @keyframes rotate {
+   0%{
+     filter: hue-rotate(0deg);
+   }
+   100%{
+     filter: hue-rotate(360deg);
+   }
+ }
+
+/*--navigation--*/
+
+.main-content h1 {
+   padding-top: 5rem;
+   font-family: 'Source Code Pro', monospace;
+   text-align: center;
+}
 section {
-  background-color: #f2f2f2;
-  height: 90vh;
+  background-color: #fff;
+  height: 100vh;
   margin:0;
-  padding:4.5rem 4rem;
+  padding:1rem 4rem;
 }
 
 section:nth-of-type(2n) {
@@ -107,38 +222,37 @@ section:last-of-type {
   height: 100vh;
 }
 
-.btn,
-a.btn,
-button.btn {
-  font-size: 1.6rem;
-  font-weight: 700;
-  line-height: 1.5;
-  position: relative;
-  display: inline-block;
-  padding: 1rem 4rem;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  text-align: center;
-  vertical-align: middle;
-  text-decoration: none;
-  letter-spacing: 0.1em;
-  color: #212529;
-  border-radius: 0.5rem;
+/*--button--*/
+.btn, a.btn, button.btn {
+   font-size: 1.2em;
+   display: block;
+   margin: 0 auto;
+   font-weight: 700;
+   line-height: 1.5;
+   width: 350px;
+   max-width: 100%;
+   padding: 1rem;
+   cursor: pointer;
+   user-select: none;
+   transition: all 0.3s;
+   text-align: center;
+   text-decoration: none;
+   letter-spacing: 0.1em;
+   color: #212529;
+   font-family: 'Source Code Pro', monospace;
 }
 a.btn-border {
   border: 2px solid #000;
   border-radius: 0;
   background: #fff;
-  -webkit-box-shadow: 4px 4px 0 #000;
-  box-shadow: 4px 4px 0 #000;
+  box-shadow: 4px 4px 0 #94f3f3;
 }
 
 a.btn-border:hover {
-  -webkit-box-shadow: -4px -4px 0 #000;
-  box-shadow: -4px -4px 0 #000;
+  box-shadow: -4px -4px 0 #ffc0cb;
 }
+
+
+
+
+
