--- a/css/stye.css
+++ b/css/stye.css
@@ -18,11 +18,25 @@ html {
   scroll-behavior: smooth;
 }
 #hero {
+  position: relative;
   padding: 1rem;
   max-height: fit-content;
   height: 100vh;
-  background: linear-gradient(90deg, #FFC0CB 50%, #94f3f3 50%);
-
+  /* background: linear-gradient(90deg, #FFC0CB 50%, #94f3f3 50%); */
+  /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+}
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 /* .hero-wrapper {
     display: block;
@@ -55,8 +69,7 @@ html {
 /*--navigation css--*/
 /*--pc nav--*/
 #navbar {
-  display: block;
-  width: 100%;
+  display: inline-block;
   top: 0;
   position: fixed;
   align-items: center;
@@ -71,7 +84,7 @@ nav ul {
 nav li {
     list-style: none;
 }
-nav li a {
+/* nav li a {
     text-decoration: none;
     font-family: 'Source Code Pro', monospace;
     color: #000;
@@ -79,6 +92,17 @@ nav li a {
     font-weight: 400;
     transition: all ease-out 250ms;
     padding: 18px 40px;
+} */
+nav li a {
+  text-decoration: none;
+  font-family: 'Source Code Pro', monospace;
+  color: #000;
+  display: block;
+  font-weight: 400;
+  transition: all ease-out 250ms;
+  padding: 18px 40px;
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
 }
 nav li a:hover {
   color: #000;
@@ -189,6 +213,7 @@ display: block;
 text-transform: uppercase;
 letter-spacing: 0.1em;
 font-weight: bold;
+writing-mode: horizontal-tb;
 }
 
 
@@ -203,7 +228,7 @@ cursor: pointer;
   height:50px;
   background-color: #000;
   border-radius: 100%;
-  display: none;
+  /* display: none; */
 }
 
 /*×に変化*/	
@@ -276,7 +301,11 @@ opacity: 0;
   }
 }
 
-/*--navigation--*/
+
+.nav-logo-wrap {
+  text-align: left;
+}
+/*--navigation end--*/
 
 .main-content h1 {
   padding: 5rem 0 1rem;
@@ -284,14 +313,16 @@ opacity: 0;
    text-align: center;
 }
 section {
-  background-color: #eaffff;
+  /* background-color: #c8e2bf; */
+  background-color: #e4f1e0;
   height: 100vh;
   margin:0;
   padding:1rem 4rem;
   scroll-margin-top: 100px;
 }
 section:nth-of-type(2n) {
-  background-color: #ffeaea;
+  /* background-color: #ffeaea; */
+  background-color: #fff;
 }
 section:last-of-type {
   height: 100vh;
@@ -357,7 +388,7 @@ a.btn-border:hover {
   content:  attr(data-skill);
   background-color: #f3b0ff;
   display: inline-block;
-  padding: 5px 0 5px 10px;
+  padding: 0 5px;
   border-radius: inherit;
   animation: load 2s 0s;
   -webkit-animation: load 2s 0s;
@@ -420,3 +451,4 @@ a.btn-border:hover {
   transform: translateY(0);
   opacity: 1;
 }
+
