--- a/css/stye.css
+++ b/css/stye.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600');
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;400&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
 * {
   box-sizing: border-box
 }
 body {
-    /* font-family: 'Source Code Pro', monospace; */
     font-family: 'Source Code Pro', monospace;
     font-size: 18px;
     margin: 0;
@@ -14,6 +14,15 @@ p {
   font-family: 'Source Code Pro', monospace;
   line-height: 1.5;
 }
+a {
+  color: #439b25;
+  text-decoration: none;
+  transition: 2s;
+}
+a:hover {
+  background: linear-gradient(transparent 60%, #ededed 60%);
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -22,10 +31,65 @@ html {
   padding: 1rem;
   max-height: fit-content;
   height: 100vh;
+  background-color: #ededed;
+  /* background-color: #989795; */
   /* background: linear-gradient(90deg, #FFC0CB 50%, #94f3f3 50%); */
   /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+  z-index: -2;
+}
+
+.h1 {
+  color: #fff;
+  font-weight: 300;
+  color: #000;
+}
+.hero-row {
+ display: inline-block;
+}
+.hero-col-left {
+position: absolute;
+left: 10%;
+top: 36%;
+}
+.hero-col-right {
+  position: absolute;
+  right: 25%;
+  top: 10%;
+  display: block;
+  /* background-color: #c8e2bf; */
+  width: 26vw;
+  height: 80vh;
+  background-position: 28% 25%;
+  background-image: linear-gradient(to bottom, rgb(255 255 255 / 34%), rgb(221 197 189 / 0%)), url(../img/about.png);
+  background-size: cover;
+  border: 15px solid rgba(255,255,255,.7);
+}
+.hero-col-right:after {
+  content: "";
+  position: absolute;
+  background-color: #c8c5c5;
+  left: 50%;
+  top: -8%;
+  width: 32vw;
+  height: 90vh;
+  z-index: -20;
+}
+.hero-title {
+  font-family: 'Rock Salt', cursive;
+  font-size: 6.5vw;
+  position: absolute;
+  top: 40%;
+  line-height: 2;
+  color: #c8c5c5;
+  z-index: 10;
+  /* opacity: 0.6; */
+}
+.hero-title::before {
+  content: "Mya Thet Chel";
+  position: absolute;
+  font-size: 2rem;
+  bottom: 16px;
+  color: #000;
 }
 @keyframes gradient {
 	0% {
@@ -38,33 +102,49 @@ html {
 		background-position: 0% 50%;
 	}
 }
-/* .hero-wrapper {
-    display: block;
-    margin: 25% 30%;
-} */
-.hero-wrapper {
-  display: block;
-  margin: 20% 15%;
-  /* background-color: #fff; */
-  padding: 2rem;
+.main-content h1 {
+  font-size: 2rem;
+  font-family: 'Rock Salt', cursive;
+  text-align: center;
 }
-.hero-wrapper h1 {
-    color: #fff;
-    font-family: 'Source Code Pro', monospace;
-    font-weight: 300;
-    color: #000;
+section {
+ /* background-color: #c8e2bf; */
+ height: 100vh;
+ margin:0;
+ padding:4rem;
+ position: relative;
+ /* scroll-margin-top: 100px; */
 }
-.hero-row {
-   display: inline-block;
+section:nth-of-type(2n) {
+  background-color: #ededed;
 }
-.hero-col-left {
-   float: left;
+section:before {
+  position: absolute;
+  font-family: 'Rock Salt', cursive;
+  font-size: 6rem;
+  color: #ededed;
+  z-index: -1;
 }
-.hero-col-right {
-   position: absolute;
-   right: 3%;
-   top: 13%;
+section#about:before {
+  content: "Aboutr";
 }
+.wrapper {
+ width: 80%;
+ margin: 0 auto;
+}
+@media screen and (max-width: 800px) {
+ .main-content h1 {
+   padding: 2rem 0 0;
+ }
+ .wrapper {
+   width: 100%;
+ }
+ section {
+   padding:1rem;
+   scroll-margin-top: 0;
+ }
+}
+
 
 /*--navigation css--*/
 /*--pc nav--*/
@@ -84,15 +164,7 @@ nav ul {
 nav li {
     list-style: none;
 }
-/* nav li a {
-    text-decoration: none;
-    font-family: 'Source Code Pro', monospace;
-    color: #000;
-    display: inline-block;
-    font-weight: 400;
-    transition: all ease-out 250ms;
-    padding: 18px 40px;
-} */
+
 nav li a {
   text-decoration: none;
   font-family: 'Source Code Pro', monospace;
@@ -307,42 +379,7 @@ opacity: 0;
 }
 /*--navigation end--*/
 
-.main-content h1 {
-  padding: 5rem 0 1rem;
-   font-family: 'Source Code Pro', monospace;
-   text-align: center;
-}
-section {
-  /* background-color: #c8e2bf; */
-  background-color: #e4f1e0;
-  height: 100vh;
-  margin:0;
-  padding:1rem 4rem;
-  scroll-margin-top: 100px;
-}
-section:nth-of-type(2n) {
-  /* background-color: #ffeaea; */
-  background-color: #fff;
-}
-section:last-of-type {
-  height: 100vh;
-}
-.wrapper {
-  width: 80%;
-  margin: 0 auto;
-}
-@media screen and (max-width: 800px) {
-  .main-content h1 {
-    padding: 2rem 0 0;
-  }
-  .wrapper {
-    width: 100%;
-  }
-  section {
-    padding:1rem;
-    scroll-margin-top: 0;
-  }
-}
+
 /*--button--*/
 .btn, a.btn, button.btn {
    font-size: 1.2em;
@@ -439,7 +476,6 @@ a.btn-border:hover {
   }
 }
 
-
 .reveal {
   position: relative;
   transform: translateY(150px);
@@ -452,3 +488,16 @@ a.btn-border:hover {
   opacity: 1;
 }
 
+/*--about--*/
+.row {
+  display: inline-block;
+  width: 100%;
+}
+.col-left {
+  float: left;
+  width: 46%;
+}
+.col-right {
+  float: right;
+  width: 46%;
+}
