--- a/css/stye.css
+++ b/css/stye.css
@@ -25,27 +25,31 @@ a {
 }
 a:hover {
   text-decoration: line-through;
+  transform: translate(0px, -4px);
 }
-
 html {
   scroll-behavior: smooth;
 }
-#hero {
-  position: relative;
-  padding: 1rem;
-  max-height: fit-content;
-  height: 100vh;
-  background-color: #99c7d329;
-  /* background-color: #989795; */
-  /* background: linear-gradient(90deg, #FFC0CB 50%, #94f3f3 50%); */
-  /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
-  z-index: -2;
+::selection {
+  background-color: #99c7d380;
 }
-
 .h1 {
   color: #fff;
   font-weight: 300;
   color: #000;
+}
+.mt-3 {
+  margin-top: 3rem;
+}
+li {
+  margin-bottom: 10px;
+}
+
+#hero {
+  padding: 1rem;
+  max-height: fit-content;
+  height: 100vh;
+  background: linear-gradient(90deg, #FFC0CB 50%, #94f3f3 50%);
 }
 .hero-row {
  display: inline-block;
@@ -57,40 +61,20 @@ top: 36%;
 }
 .hero-col-right {
   position: absolute;
-  right: 25%;
-  top: 10%;
+  right: 8%;
+  bottom: 0;
+  width: 31vw;
+  max-width: 100%;
   display: block;
-  /* background-color: #c8e2bf; */
-  width: 26vw;
-  height: 80vh;
-  background-position: 60% 24%;
-  background-image: linear-gradient(to bottom, rgb(255 255 255 / 34%), rgb(221 197 189 / 0%)), url(../img/my-profile.png);
-  background-size: cover;
-  /* border: 15px solid rgba(255,255,255,.7); */
-  border: 15px solid rgb(153 199 211 / 39%);
-  
 }
-.hero-col-right:after {
-  content: "";
-  position: absolute;
-  /* background-color: #c8c5c5; */
-  background-color: #99c7d3;
-  left: 50%;
-  top: -8%;
-  width: 32vw;
-  height: 90vh;
-  z-index: -20;
-}
+
 .hero-title {
-  /* font-family: 'Rock Salt', cursive;  */
   font-family: 'Satisfy', cursive;
   font-size: 10.5vw;
   position: absolute;
-  top: 40%;
-  /* line-height: 2; */
-  color: #99c7d361;
-  z-index: 10;
-  /* opacity: 0.6;*/
+  color: #94f3f3;
+  text-shadow: 5px 5px #558abb;
+  z-index: 1;
 }
 .hero-title::before {
   content: "Mya Thet Chel";
@@ -98,6 +82,7 @@ top: 36%;
   font-size: 2rem;
   bottom: 16px;
   color: #000;
+  text-shadow: none;
 }
 @keyframes gradient {
 	0% {
@@ -112,9 +97,12 @@ top: 36%;
 }
 
 .main-content h1 {
-  font-size: 2rem;
+  font-size: 3rem;
   font-family: 'Satisfy', cursive;
   text-align: center;
+  color: #ffc0cb;
+  text-shadow: 4px 3px #175d8b;
+  margin: 0;
 }
 section {
  background-color: #fff;
@@ -125,23 +113,49 @@ section {
  /* scroll-margin-top: 100px; */
 }
 section:nth-of-type(2n) {
-  /* background-color: #fff; */
   background-color: #99c7d329;
 }
-/* section:before {
-  position: absolute;
-  font-family: 'Satisfy', cursive;
-  font-size: 6rem;
-  color: #ededed;
-  z-index: -1;
-}
-section#about:before {
-  content: "About";
-} */
+
 .wrapper {
  width: 80%;
  margin: 0 auto;
 }
+.about-row {
+  display: grid;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 30px;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: auto;
+  grid-template-rows: auto;
+}
+@media screen and (max-width: 991px) {
+  .about-row {
+    grid-row-gap: 60px;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+  .hero-col-left {
+    left: 10%;
+    top: 30%;
+  }
+  .hero-title {
+    font-size: 24vw;
+  }
+  .hero-title::before {
+    font-size: 1.5rem;
+    bottom: -10px;
+  }
+}
+
 @media screen and (max-width: 800px) {
  .main-content h1 {
    padding: 2rem 0 0;
@@ -154,7 +168,11 @@ section#about:before {
    scroll-margin-top: 0;
  }
 }
-
+@media screen and (max-width: 600px) {
+  .hero-col-right {
+    width: 80vw;
+  }
+}
 
 /*--navigation css--*/
 /*--pc nav--*/
@@ -194,10 +212,7 @@ nav li a:hover {
    color: #000;
    text-decoration: line-through;
  }
-.nav-logo {
-  width: 140px;
-  vertical-align: middle;
-}
+
 .add-shadow {
   box-shadow: rgb(113 135 164 / 12%) 0px 0px 5px 2px;
   background-color: #fff;
@@ -385,8 +400,8 @@ opacity: 0;
 }
 
 
-.nav-logo-wrap {
-  text-align: left;
+.nav-logo-wrap a {
+  padding: 18px;
 }
 /*--navigation end--*/
 
@@ -436,8 +451,16 @@ a.btn-border:hover {
   border-radius: 10px;
   margin: 7px;
   width: auto;
+  transition: 0.5s;
+  border: 2px solid;
 }
-
+.skill-wrap div:hover {
+  transform: translate(0px, -2px);
+}
+.skill-wrap.soft div {
+  background-color: #eb8193;
+  color: #fff;
+}
 @media screen and (max-width: 786px) {
   .skill-wrap div {
     padding: 8px;
