--- a/css/stye.css
+++ b/css/stye.css
@@ -1,48 +1,58 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;500&display=swap');
+
 * {
   box-sizing: border-box
 }
 
 body {
-    font-family: 'Source Code Pro', monospace;
-    font-size: 18px;
-    margin: 0;
+  font-family: 'Source Code Pro', monospace;
+  font-size: 18px;
+  margin: 0;
 }
+
 p {
   font-family: 'Source Code Pro', monospace;
   line-height: 1.5;
 }
+
 img {
   max-width: 100%;
 }
+
 a {
   color: #4ca1b7;
   text-decoration: none;
 }
+
 a:hover {
   text-decoration: line-through;
 }
+
 html {
   scroll-behavior: smooth;
 }
+
 ::selection {
   background-color: #99c7d380;
 }
+
 .h1 {
   color: #fff;
   font-weight: 300;
   color: #000;
 }
+
 h2 {
   font-size: 20px;
 }
+
 h3 {
   font-size: 18px;
 }
+
 .mt-3 {
   margin-top: 3rem;
 }
@@ -50,28 +60,40 @@ h3 {
 li {
   margin-bottom: 10px;
 }
+
 @media screen and (max-width:600px) {
-  p, li, td  {
+
+  p,
+  li,
+  td {
     font-size: 16px;
   }
+
   .main-content h1 {
-    font-size: 2.2rem!important;
+    font-size: 2.2rem !important;
   }
-  .btn, a.btn, button.btn {
-    font-size: 17px!important;
+
+  .btn,
+  a.btn,
+  button.btn {
+    font-size: 17px !important;
   }
+
   .about-row {
     grid-row-gap: 0;
     margin-top: 3rem;
   }
+
   .job-title {
-    font-size: 18px!important;
+    font-size: 18px !important;
   }
+
   ul {
     padding-left: 24px;
   }
+
   .works-items .col {
-    padding: 1.5rem!important;
+    padding: 1.5rem !important;
   }
 }
 
@@ -82,14 +104,17 @@ li {
   min-height: calc(var(--vh, 1vh) * 100);
   background: linear-gradient(90deg, #FFC0CB 50%, #94f3f3 50%);
 }
+
 .hero-row {
- display: inline-block;
+  display: inline-block;
 }
+
 .hero-col-text {
   position: absolute;
   right: 70%;
   top: 36%;
 }
+
 .hero-col-img {
   position: absolute;
   left: 35%;
@@ -98,10 +123,12 @@ li {
   max-width: 100%;
   display: block;
 }
+
 .hero-col-img img {
   background-color: #94f3f3;
   border-radius: 100%;
 }
+
 .hero-title {
   font-family: 'Satisfy', cursive;
   font-size: 10vw;
@@ -113,6 +140,7 @@ li {
   left: 30%;
   top: 36%;
 }
+
 /* .hero-title {
   font-family: 'Satisfy', cursive;
   font-size: 10vw;
@@ -131,19 +159,23 @@ li {
   text-shadow: none;
   letter-spacing: normal;
 }
-.hero-title > span {
+
+.hero-title>span {
   color: #94f3f3;
 }
+
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .main-content h1 {
@@ -154,20 +186,23 @@ li {
   text-shadow: 4px 3px #175d8b;
   margin: 2rem 0;
 }
+
 section {
- background-color: #99c7d329;
- margin:0;
- padding:4rem;
- position: relative;
+  background-color: #99c7d329;
+  margin: 0;
+  padding: 4rem;
+  position: relative;
 }
+
 section:nth-of-type(2n) {
   background-color: #fff;
 }
 
 .wrapper {
- width: 80%;
- margin: 0 auto;
+  width: 80%;
+  margin: 0 auto;
 }
+
 .about-row {
   display: grid;
   -webkit-box-align: center;
@@ -185,6 +220,7 @@ section:nth-of-type(2n) {
   -ms-grid-rows: auto;
   grid-template-rows: auto;
 }
+
 .about-row img {
   width: 75%;
   display: block;
@@ -202,15 +238,18 @@ section:nth-of-type(2n) {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
+
   .hero-col-text {
     left: 12%;
     top: 40%;
   }
+
   .hero-title {
     font-size: 18vw;
     letter-spacing: 10px;
     left: 10%;
   }
+
   .hero-title::before {
     font-size: 1.5rem;
     bottom: -10px;
@@ -218,23 +257,26 @@ section:nth-of-type(2n) {
 }
 
 @media screen and (max-width: 800px) {
- .main-content h1 {
-   padding: 2rem 0 0;
- }
- .wrapper {
-   width: 100%;
- }
- section {
-   padding:1rem 1rem 4rem;
-   scroll-margin-top: 0;
- }
+  .main-content h1 {
+    padding: 2rem 0 0;
+  }
+
+  .wrapper {
+    width: 100%;
+  }
+
+  section {
+    padding: 1rem 1rem 4rem;
+    scroll-margin-top: 0;
+  }
 }
+
 @media screen and (max-width: 600px) {
   .hero-col-img {
     width: 58vw;
     bottom: 0;
     left: 37%;
-}
+  }
 }
 
 /*--navigation css--*/
@@ -248,12 +290,14 @@ section:nth-of-type(2n) {
   justify-content: center;
   z-index: 1;
 }
+
 nav ul {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
+
 nav li {
-    list-style: none;
+  list-style: none;
 }
 
 nav li a {
@@ -263,19 +307,22 @@ nav li a {
   display: block;
   font-weight: 400;
   transition: all ease-out 250ms;
-  padding: 18px 40px;
+  padding: 15px 40px;
   writing-mode: vertical-rl;
   text-orientation: mixed;
+  font-size: 17px;
 }
+
 nav li a:hover {
   color: #000;
   text-decoration: line-through;
   transform: translate(0px, -4px);
 }
+
 .nav-active {
-   color: #000;
-   text-decoration: line-through;
- }
+  color: #000;
+  text-decoration: line-through;
+}
 
 .add-shadow {
   box-shadow: rgb(113 135 164 / 12%) 0px 0px 5px 2px;
@@ -284,11 +331,11 @@ nav li a:hover {
 }
 
 /*--sp nav--*/
-#g-nav.panelactive{
-  position:fixed;
+#g-nav.panelactive {
+  position: fixed;
   z-index: 999;
-top: 0;
-width:100%;
+  top: 0;
+  width: 100%;
   height: 100vh;
 }
 
@@ -307,53 +354,57 @@ width:100%;
 }
 
 
-.circle-bg.circleactive{
-transform: scale(50);/*クラスが付与されたらscaleを拡大*/
+.circle-bg.circleactive {
+  transform: scale(50);
+  /*クラスが付与されたらscaleを拡大*/
 }
 
 /*ナビゲーションの縦スクロール*/
-#g-nav-list{
+#g-nav-list {
   display: none;
   position: fixed;
-  z-index: 999; 
+  z-index: 999;
   width: 100%;
   height: 100vh;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
 
-#g-nav.panelactive #g-nav-list{
-   display: block;
+#g-nav.panelactive #g-nav-list {
+  display: block;
 }
 
 /*ナビゲーション*/
 #g-nav ul {
   width: 100%;
-opacity: 0;
+  opacity: 0;
   position: absolute;
   z-index: 999;
-  top:50%;
-  left:50%;
-  transform: translate(-50%,-50%);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /*背景が出現後にナビゲーションを表示*/
 #g-nav.panelactive ul {
-  opacity:1;
+  opacity: 1;
 }
 
 /* 背景が出現後にナビゲーション li を表示※レイアウトによって調整してください。不必要なら削除*/
-#g-nav.panelactive ul li{
-animation-name:gnaviAnime;
-animation-duration:1s;
-animation-delay:.2s;/*0.2 秒遅らせて出現*/
-animation-fill-mode:forwards;
-opacity:0;
+#g-nav.panelactive ul li {
+  animation-name: gnaviAnime;
+  animation-duration: 1s;
+  animation-delay: .2s;
+  /*0.2 秒遅らせて出現*/
+  animation-fill-mode: forwards;
+  opacity: 0;
 }
-@keyframes gnaviAnime{
+
+@keyframes gnaviAnime {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -361,59 +412,60 @@ opacity:0;
 
 
 /*リストのレイアウト設定*/
-#g-nav li{
-text-align: center; 
-list-style: none;
+#g-nav li {
+  text-align: center;
+  list-style: none;
 }
 
-#g-nav li a{
-color: #000;
-text-decoration: none;
-padding:10px;
-display: block;
-text-transform: uppercase;
-letter-spacing: 0.1em;
-font-weight: 500;
-writing-mode: horizontal-tb;
-display: inline-block;
+#g-nav li a {
+  color: #000;
+  text-decoration: none;
+  padding: 10px;
+  display: block;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-weight: 500;
+  writing-mode: horizontal-tb;
+  display: inline-block;
 }
 
 
 /*========= ボタンのためのCSS ===============*/
-.openbtn1{
-position:fixed;
-top:15px;
-right: 15px;
-z-index: 9999;/*ボタンを最前面に*/
-cursor: pointer;
+.openbtn1 {
+  position: fixed;
+  top: 15px;
+  right: 15px;
+  z-index: 9999;
+  /*ボタンを最前面に*/
+  cursor: pointer;
   width: 50px;
-  height:50px;
+  height: 50px;
   background-color: #212529;
   border-radius: 100%;
 }
 
-/*×に変化*/	
-.openbtn1 span{
+/*×に変化*/
+.openbtn1 span {
   display: inline-block;
   transition: all .4s;
   position: absolute;
   left: 14px;
   height: 3px;
   border-radius: 2px;
-background-color: #fff;
+  background-color: #fff;
   width: 45%;
 }
 
 .openbtn1 span:nth-of-type(1) {
-top:15px;	
+  top: 15px;
 }
 
 .openbtn1 span:nth-of-type(2) {
-top:23px;
+  top: 23px;
 }
 
 .openbtn1 span:nth-of-type(3) {
-top:31px;
+  top: 31px;
 }
 
 .openbtn1.active span:nth-of-type(1) {
@@ -424,18 +476,20 @@ top:31px;
 }
 
 .openbtn1.active span:nth-of-type(2) {
-opacity: 0;
+  opacity: 0;
 }
 
-.openbtn1.active span:nth-of-type(3){
+.openbtn1.active span:nth-of-type(3) {
   top: 30px;
   left: 18px;
   transform: translateY(-6px) rotate(45deg);
   width: 30%;
 }
+
 .sp {
   display: none;
 }
+
 .sp-top-bar {
   background: linear-gradient(90deg, #FFC0CB 50%, #94f3f3 50%);
   display: block;
@@ -443,46 +497,58 @@ opacity: 0;
   position: fixed;
   top: 0;
 }
+
 @media screen and (max-width: 800px) {
   .openbtn1 {
     display: inherit;
   }
+
   #navbar {
     height: 10px;
     background-color: yellow;
   }
+
   .navigation {
     display: none;
   }
+
   .add-shadow {
     box-shadow: none;
   }
+
   .sp {
     display: inherit;
   }
 }
+
 .nav-logo-wrap a {
   padding: 18px;
 }
+
 a.lang {
   writing-mode: horizontal-tb;
   position: relative;
 }
+
 a.lang span {
   display: none;
   position: absolute;
   left: 67%;
   top: 30%;
 }
+
 a.lang:hover .lang-change {
   display: block;
   width: 100%;
 }
+
 /*--navigation end--*/
 
 
 /*--button--*/
-.btn, a.btn, button.btn {
+.btn,
+a.btn,
+button.btn {
   display: block;
   font-size: 1.2em;
   margin: 3rem auto 0;
@@ -497,6 +563,7 @@ a.lang:hover .lang-change {
   letter-spacing: 0.1em;
   color: #212529;
 }
+
 a.btn-border {
   border: 2px solid #000;
   border-radius: 0;
@@ -523,43 +590,52 @@ a.btn-border:hover {
   transition: 0.5s;
   border: 2px solid;
 }
+
 .skill-wrap div:hover {
   transform: translate(0px, -2px);
 }
+
 .skill-wrap.soft div {
-    background-color: #175d8b;
-    width: 90%;
-    box-shadow: none;
-    color: white;
-    border: 1px solid;
+  background-color: #175d8b;
+  width: 90%;
+  box-shadow: none;
+  color: white;
+  border: 1px solid;
 }
+
 .skill-wrap.soft table td:nth-child(1) {
   width: 25%;
 }
+
 @media screen and (max-width: 600px) {
   .skill-wrap.soft div {
     width: 100%;
   }
+
   .skill-wrap.soft table td {
-    width: 100%!important;
+    width: 100% !important;
     display: block;
   }
+
   .skill-wrap.soft table td:nth-child(2) {
     margin-bottom: 1rem;
   }
 }
+
 @media screen and (max-width: 786px) {
   .skill-wrap div {
     padding: 8px;
     margin: 10px 0;
     font-size: 16px;
+  }
 }
-}
+
 img.vector-icon {
   width: 28px;
   vertical-align: middle;
   margin-right: 10px;
 }
+
 .reveal {
   position: relative;
   transform: translateY(150px);
@@ -576,14 +652,17 @@ img.vector-icon {
 .experience-wrap {
   margin-top: 3rem;
 }
-.experience-balloon, .experience-balloon-last {
+
+.experience-balloon,
+.experience-balloon-last {
   position: relative;
   padding: 20px;
   background-color: #ffeef1;
   border: 2px solid #212529;
   margin-bottom: 4rem;
 }
-.experience-balloon::before{
+
+.experience-balloon::before {
   content: '';
   position: absolute;
   display: block;
@@ -595,7 +674,8 @@ img.vector-icon {
   border-right: 15px solid transparent;
   border-left: 15px solid transparent;
 }
-.experience-balloon::after{
+
+.experience-balloon::after {
   content: '';
   position: absolute;
   display: block;
@@ -607,9 +687,11 @@ img.vector-icon {
   border-right: 15px solid transparent;
   border-left: 15px solid transparent;
 }
+
 .deco-spot {
   margin-bottom: 10px;
 }
+
 .deco-spot span {
   width: 15px;
   height: 15px;
@@ -618,69 +700,85 @@ img.vector-icon {
   border-radius: 100px;
   border: 2px solid #720013;
 }
+
 .deco-spot span.red {
   background-color: #ff0000;
 }
+
 .deco-spot span.yellow {
   background-color: #ffcf00;
 }
+
 .deco-spot span.green {
   background-color: #bcff09;
 }
+
 .experience-header {
   border: 2px solid;
   padding: 1rem;
   background-color: #fff;
   margin-bottom: 1rem;
 }
+
 .job-title {
   font-size: 20px;
   font-weight: bold;
 }
+
 .company-name {
   font-size: 17px;
   color: #eb8193;
 }
+
 .los {
   font-style: italic;
   font-size: 16px;
   color: #175d8b;
   font-weight: bold;
 }
+
 .works-items {
   margin-top: 2rem;
-  font-size: 15px!important;
+  font-size: 15px !important;
 }
+
 .works-items .row {
   display: grid;
   gap: 3rem;
   grid-template-columns: 1fr 1fr 1fr;
 }
+
 .works-items .col:nth-child(2n) {
   padding: 2rem;
   box-shadow: 2px 2px 12px 2px #e7b7bc;
   border-radius: 10px;
 }
+
 .works-items .col {
   padding: 2rem;
   box-shadow: 2px 2px 12px 2px #b2dbdb;
   border-radius: 10px;
   transition: 0.5s;
 }
+
 .works-items .col:hover {
   transform: translate(0px, -5px);
 }
+
 .project-title {
   font-weight: bold;
   font-size: 18px;
   margin-bottom: 1rem;
 }
+
 .tools {
   margin-bottom: 1rem;
 }
-.works-items .col:nth-child(2n) > .tools span {
+
+.works-items .col:nth-child(2n)>.tools span {
   background-color: #f5e2e4;
 }
+
 .tools span {
   display: inline-flex;
   border: 1px solid;
@@ -690,35 +788,42 @@ img.vector-icon {
   font-size: 14px;
   background-color: #e0f1f1;
 }
+
 a.to-page {
   color: #212529;
   display: block;
   text-align: right;
 }
+
 @media screen and (max-width: 1024px) {
   .works-items .row {
     gap: 3rem;
     grid-template-columns: 1fr 1fr;
   }
 }
+
 @media screen and (max-width: 600px) {
   .works-items .row {
     gap: 3rem;
     grid-template-columns: 1fr;
   }
 }
+
 .sns {
   text-align: center;
   margin-top: 3rem;
 }
+
 .sns a {
   color: #212529;
   margin: 0 1rem;
   font-size: 20px;
 }
+
 .sns a:hover {
   color: #FFC0CB;
 }
+
 footer {
   background-color: black;
   color: #fff;
