--- a/css/stye.css
+++ b/css/stye.css
@@ -211,7 +211,7 @@ section:nth-of-type(2n) {
   -ms-flex: 1;
   flex: 1;
   grid-auto-columns: 1fr;
-  grid-column-gap: 3rem;
+  grid-column-gap: 0;
   -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
   -ms-grid-rows: auto;
@@ -657,7 +657,7 @@ img.vector-icon {
 .experience-balloon-last {
   position: relative;
   padding: 20px;
-  background-color: #ffffb8;
+  background-color: #dcffff;
   border: 2px solid #212529;
   margin-bottom: 4rem;
 }
@@ -683,7 +683,7 @@ img.vector-icon {
   height: 0;
   left: 45%;
   bottom: -12px;
-  border-top: 15px solid #ffffb8;
+  border-top: 15px solid #dcffff;
   border-right: 15px solid transparent;
   border-left: 15px solid transparent;
 }
@@ -777,7 +777,7 @@ img.vector-icon {
 }
 
 .works-items .col:nth-child(2n)>.tools span {
-  background-color: #f5e2e4;
+  background-color: #ffe0e3;
 }
 
 .tools span {
@@ -787,7 +787,7 @@ img.vector-icon {
   margin: 3px 0;
   border-radius: 4px;
   font-size: 14px;
-  background-color: #e0f1f1;
+  background-color: #dcffff;
 }
 
 a.to-page {
@@ -798,14 +798,13 @@ a.to-page {
 
 @media screen and (max-width: 1024px) {
   .works-items .row {
-    gap: 3rem;
+    gap: 2rem;
     grid-template-columns: 1fr 1fr;
   }
 }
 
 @media screen and (max-width: 600px) {
   .works-items .row {
-    gap: 3rem;
     grid-template-columns: 1fr;
   }
 }
