--- a/css/stye.css
+++ b/css/stye.css
@@ -94,10 +94,6 @@ li {
   ul {
     padding-left: 24px;
   }
-
-  .works-items .col {
-    padding: 1.5rem !important;
-  }
 }
 
 #hero {
@@ -105,8 +101,8 @@ li {
   max-height: fit-content;
   height: 100vh;
   min-height: calc(var(--vh, 1vh) * 100);
-  /* background: linear-gradient(90deg, #FFC0CB 50%, #94f3f3 50%); */
-  background: linear-gradient(90deg, #ff0 50%, #5fffff 50%);
+  background: linear-gradient(90deg, #FFC0CB 50%, #94f3f3 50%);
+  /* background: linear-gradient(90deg, #ff0 50%, #5fffff 50%); */
 }
 
 .hero-row {
@@ -136,8 +132,8 @@ li {
   font-family: 'Satisfy', cursive;
   font-size: 10vw;
   position: absolute;
-  /* color: #ffc0cb; */
-  color: #ffff03;
+  color: #ffc0cb;
+  /* color: #ffff03; */
   text-shadow: 5px 5px #558abb;
   z-index: 1;
   letter-spacing: 13px;
@@ -178,9 +174,7 @@ li {
   font-size: 2.6rem;
   font-family: 'Satisfy', cursive;
   text-align: center;
-  /* color: #ffc0cb; */
-  color: #4cf4f5;
-  text-shadow: 4px 3px #175d8b;
+  color: #000;
   margin: 2rem 0;
 }
 
@@ -192,7 +186,8 @@ section {
 }
 
 section:nth-of-type(2n) {
-  background-color: #ffffe3;
+  /* background-color: #ffffe3; */
+  background-color: #fff7f9;
 }
 
 .wrapper {
@@ -203,37 +198,30 @@ section:nth-of-type(2n) {
 .about-row {
   display: grid;
   -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
   align-items: start;
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
   grid-auto-columns: 1fr;
   grid-column-gap: 0;
-  -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: auto;
   grid-template-rows: auto;
+  gap: 20px;
 }
 
 .about-row img {
-  width: 75%;
+  width: 500px;
   display: block;
   margin: 1rem auto;
-  border-right: 10px #60ffff solid;
-  border-left: 10px #ffff01 solid;
-  border-top: 10px #ffff01 solid;
-  border-bottom: 10px #5fffff solid;
   border-radius: 50px;
 }
 
 @media screen and (max-width: 991px) {
   .about-row {
     margin-top: 0;
-    -ms-grid-columns: 1fr;
-    grid-template-columns: 1fr;
+    display: flex;
+    justify-content: center;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+    align-items: center;
   }
 
   .hero-col-text {
@@ -291,6 +279,7 @@ section:nth-of-type(2n) {
 nav ul {
   padding: 0;
   margin: 0;
+  margin-top: 20px;
 }
 
 nav li {
@@ -320,6 +309,10 @@ nav li a:hover {
   text-decoration: line-through;
 }
 
+img.nav-logo {
+  width: 60px;
+}
+
 .add-shadow {
   box-shadow: rgb(113 135 164 / 12%) 0px 0px 5px 2px;
   background-color: #fff;
@@ -343,8 +336,8 @@ nav li a:hover {
   height: 100px;
   border-radius: 50%;
   transform: scale(0);
-  /* background: linear-gradient(141deg, #FFC0CB 50%, #94f3f3 50%); */
-  background: linear-gradient(141deg, #ffff00 50%, #5fffff 50%);
+  background: linear-gradient(141deg, #FFC0CB 50%, #94f3f3 50%);
+  /* background: linear-gradient(141deg, #ffff00 50%, #5fffff 50%); */
   right: -50px;
   top: -50px;
   transition: all .6s;
@@ -654,7 +647,7 @@ img.vector-icon {
 }
 
 .experience-balloon,
-.experience-balloon-last {
+.experience-balloon-first {
   position: relative;
   padding: 20px;
   background-color: #dcffff;
@@ -669,8 +662,8 @@ img.vector-icon {
   width: 0;
   height: 0;
   left: 45%;
-  bottom: -15px;
-  border-top: 15px solid #212529;
+  top: -17px;
+  border-bottom: 15px solid #212529;
   border-right: 15px solid transparent;
   border-left: 15px solid transparent;
 }
@@ -682,10 +675,21 @@ img.vector-icon {
   width: 0;
   height: 0;
   left: 45%;
-  bottom: -12px;
-  border-top: 15px solid #dcffff;
+  top: -14px;
+  border-bottom: 15px solid #dcffff;
   border-right: 15px solid transparent;
   border-left: 15px solid transparent;
+}
+.status, .status-previous {
+  background-color: #eb8193;
+  width: 210px;
+  color: #fff;
+  text-align: center;
+  padding: 4px 12px;
+  border-radius: 8px 8px 0 0;
+}
+.status-previous {
+  background-color: #6c6c6c;
 }
 
 .deco-spot {
@@ -747,15 +751,18 @@ img.vector-icon {
   gap: 3rem;
   grid-template-columns: 1fr 1fr 1fr;
 }
-
+.works-items.current .row {
+  grid-template-columns: 1fr 1fr;
+}
 .works-items .col:nth-child(2n) {
-  padding: 2rem;
+  padding: 20px 20px 40px;
   box-shadow: 2px 2px 12px 2px #e7b7bc;
   border-radius: 10px;
 }
 
 .works-items .col {
-  padding: 2rem;
+  position: relative;
+  padding: 20px 20px 40px;
   box-shadow: 2px 2px 12px 2px #b2dbdb;
   border-radius: 10px;
   transition: 0.5s;
@@ -765,7 +772,34 @@ img.vector-icon {
 .works-items .col:hover {
   transform: translate(0px, -5px);
 }
-
+.header-h2-line {
+  margin: 100px 0 60px;
+  text-align: center;
+}
+.header-h2-line span {
+  color: #000;
+  display: inline-block;
+  font-size: 24px;
+  padding: 0 2rem;
+  position: relative;
+}
+.header-h2-line span:after, .header-h2-line span:before {
+  background-color: #000;
+  content: "";
+  height: 1px;
+  max-width: 100%;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  width: 15%;
+}
+.header-h2-line span:before {
+  left: 100%;
+}
+.header-h2-line span:after {
+  right: 100%;
+}
 .project-title {
   font-weight: bold;
   font-size: 18px;
@@ -791,9 +825,11 @@ img.vector-icon {
 }
 
 a.to-page {
+  position: absolute;
+  bottom: 20px;
   color: #212529;
   display: block;
-  text-align: right;
+  right: 20px;
 }
 
 @media screen and (max-width: 1024px) {
